Update poshe project. Fix youtube embed overlapping

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -337,28 +337,29 @@ main {
           }
         }
       }
+    }
+  }
 
-      > .video-overlay {
-        background-color: rgba($color: #000000, $alpha: 0.9);
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 98;
-        &:hover {
-          cursor: pointer;
-        }
+  > .video-overlay {
+    background-color: rgba($color: #000000, $alpha: 0.9);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    z-index: 99999;
 
-        > .project-video {
-          width: 50vw;
-          height: 60vh;
-          z-index: 99;
-        }
-      }
+    &:hover {
+      cursor: pointer;
+    }
+
+    > .project-video {
+      width: 50vw;
+      height: 60vh;
+      z-index: 99999 !important;
     }
   }
 }
